# flux

./: .flux  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  flux.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: agents.md  architecture.md  commands.md  flux-language.md  github.md  manifest.json  repository-intelligence.md
examples/: README.md
examples/node-app/: .flux  index.js  package.json  test.js
examples/python-app/: .flux  app.py  requirements.txt  test_app.py
examples/rust-app/: .flux
examples/rust-app/src/: main.rs
examples/workspace-demo/: README.md  flux.workspace
examples/workspace-demo/api/: .flux
examples/workspace-demo/api/src/: main.rs
examples/workspace-demo/shared/: .flux  Cargo.toml
examples/workspace-demo/shared/src/: lib.rs
packaging/: README.md
packaging/homebrew/: flux.rb
packaging/scoop/: flux.json
src/: fsutil.rs  main.rs
src/agent/: mod.rs
src/agents/: builtins.rs  mod.rs
src/analytics/: mod.rs
src/artifacts/: mod.rs
src/ask/: mod.rs
src/assist/: mod.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/core/: detect.rs  graph.rs  logging.rs  mod.rs  pipeline.rs  runner.rs
src/core/config/: ast.rs  mod.rs  parser.rs
src/dashboard/: mod.rs
src/deploy/: mod.rs
src/docs_engine/: mod.rs
src/github/: mod.rs
src/integrations/: mod.rs
src/intel/: deps.rs  git.rs  health.rs  mod.rs
src/knowledge/: json.rs  mod.rs
src/platform/: mod.rs
src/plugins/: mod.rs
src/policy/: mod.rs
src/repro/: mod.rs
src/runners/: containers.rs  mod.rs  node.rs  python.rs  rust.rs  shell.rs
src/secrets/: chacha20.rs  mod.rs
src/tools/: changelog.rs  deps.rs  doctor.rs  mod.rs  version.rs
src/workspace/: mod.rs
tests/: integration.rs
