# Published to crates.io as `flux-platform` (the short name `flux` is taken by an
# unrelated crate). The installed binary is still `flux` — see `[[bin]]` below.
[package]
name = "flux-platform"
version = "0.3.0"
edition = "2021"
rust-version = "1.74"
description = "A local-first developer automation platform: build, test, package, and deploy projects from a single .flux file."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/martin-k-m/flux"
homepage = "https://flux.blinkdev.me"
documentation = "https://github.com/martin-k-m/flux/tree/main/docs"
keywords = ["build", "ci", "automation", "cli", "pipeline"]
categories = [
    "command-line-utilities",
    "development-tools::build-utils",
    "development-tools",
]

[[bin]]
name = "flux"
path = "src/main.rs"

[dependencies]
# `default-features = false` drops clap's `color` feature, which is the only
# thing that would pull in `windows-sys` (and thus a `dlltool` build step that
# needs a full MinGW binutils). We keep everything needed for a good CLI.
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
sha2 = "0.10"
anyhow = "1.0"

[profile.release]
strip = true
lto = "thin"
